--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,3 @@
 theme: jekyll-theme-cayman
-google_analytics: 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-REDJ02G086"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+google_analytics: G-REDJ02G086
 
-  gtag('config', 'G-REDJ02G086');
-</script>
